--- a/p2_data_modeling_cassandra/cassandra_etl.ipynb
+++ b/p2_data_modeling_cassandra/cassandra_etl.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -337,21 +337,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "338 4 Faithless Music Matters (Mark Knight Dub) 495.3073\n"
+      "Faithless Music Matters (Mark Knight Dub) 495.3073\n"
      ]
     }
    ],
    "source": [
     "# verify the data was entered into the table\n",
     "\n",
-    "query = \"select * from song_in_session WHERE session_id=338 AND item_in_session=4\"\n",
+    "query = \"SELECT * FROM song_in_session WHERE session_id=338 AND item_in_session=4\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
     "for row in rows:\n",
-    "    print (row.session_id, row.item_in_session, row.artist_name, row.song_title, row.song_duration)"
+    "    print (row.artist_name, row.song_title, row.song_duration)"
    ]
   },
   {
@@ -401,28 +401,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 182 Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
+      "Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
      ]
     }
    ],
    "source": [
     "# verify the data was entered into the table\n",
     "\n",
-    "query = \"select * from song_in_user_session WHERE user_id=10 AND session_id=182\"\n",
+    "query = \"SELECT * FROM song_in_user_session WHERE user_id=10 AND session_id=182\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
     "for row in rows:\n",
-    "    print (row.user_id, row.session_id, row.artist_name, row.song_title, row.user_first_name, row.user_last_name)"
+    "    print (row.artist_name, row.song_title, row.user_first_name, row.user_last_name)"
    ]
   },
   {
@@ -435,15 +435,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create table\n",
     "\n",
-    "query = \"CREATE TABLE IF NOT EXISTS song_in_session \"\n",
-    "query = query + \"(session_id INT, item_in_session INT, artist_name VARCHAR, song_title VARCHAR, song_duration DECIMAL, \\\n",
-    "PRIMARY KEY (session_id, item_in_session))\"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS user_song_listen \"\n",
+    "query = query + \"(user_id INT, user_first_name VARCHAR, user_last_name VARCHAR, song_title VARCHAR, \\\n",
+    "PRIMARY KEY (song_title, user_id))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,27 +465,37 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO song_in_session (session_id, item_in_session, artist_name, song_title, song_duration)\"\n",
-    "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
+    "        query = \"INSERT INTO user_song_listen (user_id, user_first_name, user_last_name, song_title)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s)\"\n",
+    "        session.execute(query, (int(line[10]), line[1], line[4], line[9]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacqueline Lynch\n",
+      "Tegan Levine\n",
+      "Sara Johnson\n"
+     ]
+    }
+   ],
    "source": [
     "# verify the data was entered into the table\n",
     "\n",
-    "query = \"select * from song_in_session WHERE session_id=338 AND item_in_session=4\"\n",
+    "query = \"SELECT * FROM user_song_listen WHERE song_title='All Hands Against His Own'\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "    \n",
     "for row in rows:\n",
-    "    print (row.session_id, row.item_in_session, row.artist_name, row.song_title, row.song_duration)"
+    "    print (row.user_first_name, row.user_last_name)"
    ]
   },
   {
@@ -497,18 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "query1 = \"drop table song_in_session\"\n",
-    "query2 = \"drop table song_in_users\"\n",
-    "query3 = \"drop table song_title\"\n",
+    "query2 = \"drop table song_in_user_session\"\n",
+    "query3 = \"drop table user_song_listen\"\n",
     "\n",
     "try:\n",
     "    rows1 = session.execute(query1)\n",
-    "#     rows2 = session.execute(query2)\n",
-    "#     rows3 = session.execute(query3)\n",
+    "    rows2 = session.execute(query2)\n",
+    "    rows3 = session.execute(query3)\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
@@ -522,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
